--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
+  <head>
+    <script src="https://unpkg.com/lodash@4.17.20"></script>
+  </head>
   <body>
     Welcome to Greenstand map!
   </body>
+  <script src="./src/index.js" ></script>
 </html>
